Fix search field + print css not showing

--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ input[type="search"]::-webkit-search-cancel-button {
   display: none;
 }
 
-.content-area {
+.content-area, .post-container {
   min-height: 72vh;
 }
 
@@ -481,6 +481,9 @@ header {
   border-bottom-right-radius: 15px;
   padding-left: 0;
   padding-bottom: 15px;
+  position: absolute;
+  left: 30%;
+  z-index: 30;
   -webkit-box-shadow: 5px 5px 15px -2px rgba(7,28,46,0.53); 
   box-shadow: 5px 5px 15px -2px rgba(7,28,46,0.53);
 }
@@ -859,6 +862,15 @@ header {
   margin-bottom: 20px;
   font-style: italic;
   text-align: center;
+}
+
+.card-scientific-name a {
+  color: black;
+  text-decoration: none;
+}
+
+.card-scientific-name a:hover {
+  text-decoration: none;
 }
 
 /* 
@@ -1350,6 +1362,8 @@ footer {
 
   .search, #searchResults {
     width: 85%;
+    position: relative;
+    left: 0;
   }
 
   .post-row img {
